--- a/WS-ScaneApp/appsettings.json
+++ b/WS-ScaneApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Secret": "2ga1gqr1grGARGRGrg.4a541gfdDFfafwAEFAW,EFAWEFd154s5A4D54G4TKYU54K5YUK4FU"
+    "SecretString": "2ga1gqr1grGARGRGrg.4a541gfdDFfafwAEFAW,EFAWEFd154s5A4D54G4TKYU54K5YUK4FU"
   },
   "Logging": {
     "LogLevel": {
