--- a/WebApp-ScaneApp/package.json
+++ b/WebApp-ScaneApp/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "bootstrap": "^5.0.1",
+    "jquery": "^3.6.0",
     "rxjs": "~7.0.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
